<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chenqiwei.tools.MainActivity$PlaceholderFragment" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_status" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_phone_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_ip" />

            <TextView
                android:id="@+id/tv_phone_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_string" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/control_tip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_jni_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_tip" />

            <Button
                android:id="@+id/btn_jni_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_tip" />

            <Button
                android:id="@+id/btn_filesync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sync" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_reboot_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_reboot_recovery" />
        </LinearLayout>

    </LinearLayout>

